--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -11,12 +11,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    name: Build
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 'lts'
+
       name: Install dependencies
       - run: npm install
-      name: Build
+
+      name: Run CI
       - run: npm run ci
