--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: "0 2 2 */4 *"
+    - cron: '0 2 2 */4 *'
   workflow_dispatch:
 
 jobs:
@@ -17,9 +17,5 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 'lts'
-
-      name: Install dependencies
-        - run: npm install
-
-      name: Run CI
-        - run: npm run ci
+      - run: npm install
+      - run: npm run ci
