Simplify prettier run

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"type": "commonjs",
 	"scripts": {
 		"ci": "tsc --noEmit && npm run lint",
-		"build": "tsc && npm run renameCjs && npm run prettier",
+		"build": "tsc && npm run renameCjs && prettier \"./dist/*.cjs\" --write",
 		"renameCjs": "node -e \"require('fs').renameSync('dist/tstl-simple-inline-function.js', 'dist/tstl-simple-inline-function.cjs')\"",
 		"lint": "eslint ./*.ts",
 		"prettier": "prettier --write ./"
